@@ -1,3 +1,4 @@
+# coding: US-ASCII
 require 'psych/helper'
 
 module Psych
