@@ -248,6 +248,8 @@ with all sufficient information, see the ChangeLog file.
 
   * Added %i and %I for symbol list creation (similar to %w and %W).
 
+  * Default source encoding is changed to UTF-8. (was US-ASCII)
+
 === Compatibility issues (excluding feature bug fixes)
 
   * Signal.trap
